Fix map display issue on mobile. General formatting changes.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -78,7 +78,7 @@ body {
 }
 
 #candj {
-  margin: 10% 0;
+  margin: 6% 0;
   text-align: center;
 }
   
@@ -103,7 +103,7 @@ body {
 }
 
 .main-section {
-  margin-top: 15%;
+  margin-top: 10%;
   width: 100%;
 }
 
@@ -174,7 +174,7 @@ body {
   font-size: 0.8rem;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1000px) {
   #menu-button {
     display: none;
   }
@@ -217,11 +217,98 @@ body {
     font-size: 2.3rem;
   }
 
+  #pic-container {
+    width: 60%; 
+    height: 60%;
+  }
+
   .section-content-container.flex {
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-evenly;
     height: 100%;
+  }
+
+  .section-content {
+    width: 70%;
+  }
+
+  .flex-item {
+    width: 35%;
+    height: 100%;
+    margin: 0;
+  }
+
+  #ceremony-title {
+    margin: 3% 0 1% 0;
+  }
+  
+  .ceremony-info {
+    margin: 0 0 1% 0;
+  }
+  
+  .ceremony-info.small {
+    margin: 2%, 0, 0, 0;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  #menu-button {
+    display: none;
+  }
+  
+  #nav-container {
+    height: 4%;
+  }
+
+  #nav-container.hide {
+    background-color: #ebe9e3;
+  }
+
+  nav {
+    text-align: center;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    margin: auto;
+  }
+
+  .nav-link {
+    font-size: 1.2rem;
+    height: 100%;
+    display: inline-block;
+  }
+
+  .nav-link:hover {
+    transform: scale(1.03);
+  }
+
+  .nav-link.hide {
+    display: inline-block;
+  }
+
+  .names {
+    font-size: 4rem;
+  }
+
+  .dateloc {
+    font-size: 2.3rem;
+  }
+
+  #pic-container {
+    width: 50%; 
+    height: 50%;
+  }
+
+  .section-content-container.flex {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-evenly;
+    height: 100%;
+  }
+
+  .section-content {
+    width: 60%;
   }
 
   .flex-item {
